appId: dev.msfjarvis.claw.android
tags:
  - feature
  - posts
---
- runFlow: ../helpers/launch-app.yaml
- tapOn: "Hottest"
- assertVisible: "Hottest"
- extendedWaitUntil:
    visible:
      id: "comments_button"
    timeout: 5000
- scroll
- scroll
- scroll
- assertVisible: "Hottest"
